sdk/relay/arm-relay/samples/v3/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                       | **Description**                                                                                                                                                                                                                                                       |
| ------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [hybridConnectionsCreateOrUpdateAuthorizationRuleSample.js][hybridconnectionscreateorupdateauthorizationrulesample] | Creates or updates an authorization rule for a hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAuthorizationRuleCreate.json                              |
| [hybridConnectionsCreateOrUpdateSample.js][hybridconnectionscreateorupdatesample]                                   | Creates or updates a service hybrid connection. This operation is idempotent. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionCreate.json                                   |
| [hybridConnectionsDeleteAuthorizationRuleSample.js][hybridconnectionsdeleteauthorizationrulesample]                 | Deletes a hybrid connection authorization rule. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAutorizationRuleDelete.json                                                 |
| [hybridConnectionsDeleteSample.js][hybridconnectionsdeletesample]                                                   | Deletes a hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridconnectionDelete.json                                                                                    |
| [hybridConnectionsGetAuthorizationRuleSample.js][hybridconnectionsgetauthorizationrulesample]                       | Hybrid connection authorization rule for a hybrid connection by name. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAutorizationRuleGet.json                              |
| [hybridConnectionsGetSample.js][hybridconnectionsgetsample]                                                         | Returns the description for the specified hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionGet.json                                                       |
| [hybridConnectionsListAuthorizationRulesSample.js][hybridconnectionslistauthorizationrulessample]                   | Authorization rules for a hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAutorizationRuleListAll.json                                                   |
| [hybridConnectionsListByNamespaceSample.js][hybridconnectionslistbynamespacesample]                                 | Lists the hybrid connection within the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionListAll.json                                                              |
| [hybridConnectionsListKeysSample.js][hybridconnectionslistkeyssample]                                               | Primary and secondary connection strings to the hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAuthorizationRuleListKey.json                            |
| [hybridConnectionsRegenerateKeysSample.js][hybridconnectionsregeneratekeyssample]                                   | Regenerates the primary or secondary connection strings to the hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAuthorizationRuleRegenrateKey.json        |
| [namespacesCheckNameAvailabilitySample.js][namespaceschecknameavailabilitysample]                                   | Check the specified namespace name availability. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceCheckNameAvailability.json                                                              |
| [namespacesCreateOrUpdateAuthorizationRuleSample.js][namespacescreateorupdateauthorizationrulesample]               | Creates or updates an authorization rule for a namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAuthorizationRuleCreate.json                                                   |
| [namespacesCreateOrUpdateSample.js][namespacescreateorupdatesample]                                                 | Create Azure Relay namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceCreate.json                                                                                                |
| [namespacesDeleteAuthorizationRuleSample.js][namespacesdeleteauthorizationrulesample]                               | Deletes a namespace authorization rule. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAutorizationRuleDelete.json                                                                      |
| [namespacesDeleteSample.js][namespacesdeletesample]                                                                 | Deletes an existing namespace. This operation also removes all associated resources under the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceDelete.json                     |
| [namespacesGetAuthorizationRuleSample.js][namespacesgetauthorizationrulesample]                                     | Authorization rule for a namespace by name. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAutorizationRuleGet.json                                                                     |
| [namespacesGetSample.js][namespacesgetsample]                                                                       | Returns the description for the specified namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceGet.json                                                                            |
| [namespacesListAuthorizationRulesSample.js][namespaceslistauthorizationrulessample]                                 | Authorization rules for a namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAutorizationRuleListAll.json                                                                        |
| [namespacesListByResourceGroupSample.js][namespaceslistbyresourcegroupsample]                                       | Lists all the available namespaces within the ResourceGroup. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceListByResourceGroup.json                                                    |
| [namespacesListKeysSample.js][namespaceslistkeyssample]                                                             | Primary and secondary connection strings to the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAuthorizationRuleListKey.json                                                 |
| [namespacesListSample.js][namespaceslistsample]                                                                     | Lists all the available namespaces within the subscription regardless of the resourceGroups. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceListBySubscription.json                     |
| [namespacesRegenerateKeysSample.js][namespacesregeneratekeyssample]                                                 | Regenerates the primary or secondary connection strings to the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAuthorizationRuleRegenrateKey.json                             |
| [namespacesUpdateSample.js][namespacesupdatesample]                                                                 | Creates or updates a namespace. Once created, this namespace's resource manifest is immutable. This operation is idempotent. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceUpdate.json |
| [operationsListSample.js][operationslistsample]                                                                     | Lists all available Relay REST API operations. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/RelayOperations_List.json                                                                                          |
| [wcfRelaysCreateOrUpdateAuthorizationRuleSample.js][wcfrelayscreateorupdateauthorizationrulesample]                 | Creates or updates an authorization rule for a WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAuthorizationRuleCreate.json                                                                 |
| [wcfRelaysCreateOrUpdateSample.js][wcfrelayscreateorupdatesample]                                                   | Creates or updates a WCF relay. This operation is idempotent. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayCreate.json                                                                              |
| [wcfRelaysDeleteAuthorizationRuleSample.js][wcfrelaysdeleteauthorizationrulesample]                                 | Deletes a WCF relay authorization rule. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAutorizationRuleDelete.json                                                                                    |
| [wcfRelaysDeleteSample.js][wcfrelaysdeletesample]                                                                   | Deletes a WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayDelete.json                                                                                                                       |
| [wcfRelaysGetAuthorizationRuleSample.js][wcfrelaysgetauthorizationrulesample]                                       | Get authorizationRule for a WCF relay by name. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAutorizationRuleGet.json                                                                                |
| [wcfRelaysGetSample.js][wcfrelaysgetsample]                                                                         | Returns the description for the specified WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayGet.json                                                                                          |
| [wcfRelaysListAuthorizationRulesSample.js][wcfrelayslistauthorizationrulessample]                                   | Authorization rules for a WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAutorizationRuleListAll.json                                                                                      |
| [wcfRelaysListByNamespaceSample.js][wcfrelayslistbynamespacesample]                                                 | Lists the WCF relays within the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayListAll.json                                                                                                |
| [wcfRelaysListKeysSample.js][wcfrelayslistkeyssample]                                                               | Primary and secondary connection strings to the WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAuthorizationRuleListKey.json                                                               |
| [wcfRelaysRegenerateKeysSample.js][wcfrelaysregeneratekeyssample]                                                   | Regenerates the primary or secondary connection strings to the WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAuthorizationRuleRegenrateKey.json                                           |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node hybridConnectionsCreateOrUpdateAuthorizationRuleSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env RELAY_SUBSCRIPTION_ID="<relay subscription id>" RELAY_RESOURCE_GROUP="<relay resource group>" node hybridConnectionsCreateOrUpdateAuthorizationRuleSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[hybridconnectionscreateorupdateauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsCreateOrUpdateAuthorizationRuleSample.js
[hybridconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsCreateOrUpdateSample.js
[hybridconnectionsdeleteauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsDeleteAuthorizationRuleSample.js
[hybridconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsDeleteSample.js
[hybridconnectionsgetauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsGetAuthorizationRuleSample.js
[hybridconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsGetSample.js
[hybridconnectionslistauthorizationrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsListAuthorizationRulesSample.js
[hybridconnectionslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsListByNamespaceSample.js
[hybridconnectionslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsListKeysSample.js
[hybridconnectionsregeneratekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/hybridConnectionsRegenerateKeysSample.js
[namespaceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesCheckNameAvailabilitySample.js
[namespacescreateorupdateauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesCreateOrUpdateAuthorizationRuleSample.js
[namespacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesCreateOrUpdateSample.js
[namespacesdeleteauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesDeleteAuthorizationRuleSample.js
[namespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesDeleteSample.js
[namespacesgetauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesGetAuthorizationRuleSample.js
[namespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesGetSample.js
[namespaceslistauthorizationrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesListAuthorizationRulesSample.js
[namespaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesListByResourceGroupSample.js
[namespaceslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesListKeysSample.js
[namespaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesListSample.js
[namespacesregeneratekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesRegenerateKeysSample.js
[namespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/namespacesUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/operationsListSample.js
[wcfrelayscreateorupdateauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysCreateOrUpdateAuthorizationRuleSample.js
[wcfrelayscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysCreateOrUpdateSample.js
[wcfrelaysdeleteauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysDeleteAuthorizationRuleSample.js
[wcfrelaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysDeleteSample.js
[wcfrelaysgetauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysGetAuthorizationRuleSample.js
[wcfrelaysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysGetSample.js
[wcfrelayslistauthorizationrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysListAuthorizationRulesSample.js
[wcfrelayslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysListByNamespaceSample.js
[wcfrelayslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysListKeysSample.js
[wcfrelaysregeneratekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/javascript/wcfRelaysRegenerateKeysSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-relay?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/relay/arm-relay/README.md
